[wip]: Adiciona detalhes do cliente
