# src/gen/models/GetCustomerDetailResponse.ts
@@ -1,0 +1,159 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Pontuaí
+ * The Pontuaí API experience :)
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface GetCustomerDetailResponse
+ */
+export interface GetCustomerDetailResponse {
+    /**
+     * Id to identify the customer
+     * @type {string}
+     * @memberof GetCustomerDetailResponse
+     */
+    id: string;
+    /**
+     * Full name of the member
+     * @type {string}
+     * @memberof GetCustomerDetailResponse
+     */
+    name: string;
+    /**
+     * Phone number of the member
+     * @type {string}
+     * @memberof GetCustomerDetailResponse
+     */
+    phone: string;
+    /**
+     * Email address of the member
+     * @type {string}
+     * @memberof GetCustomerDetailResponse
+     */
+    email?: string;
+    /**
+     * Total loyalty or reward points accumulated by the member
+     * @type {number}
+     * @memberof GetCustomerDetailResponse
+     */
+    points: number;
+    /**
+     * Date the member joined, in ISO format
+     * @type {Date}
+     * @memberof GetCustomerDetailResponse
+     */
+    memberSince: Date;
+    /**
+     * Current status of the member (e.g., active, inactive)
+     * @type {string}
+     * @memberof GetCustomerDetailResponse
+     */
+    status: string;
+    /**
+     * Tier level of the member, typically based on loyalty or engagement
+     * @type {string}
+     * @memberof GetCustomerDetailResponse
+     */
+    tier?: string;
+    /**
+     * Birthdate of the member in YYYY-MM-DD format
+     * @type {string}
+     * @memberof GetCustomerDetailResponse
+     */
+    birthdate?: string;
+    /**
+     * Physical address of the member
+     * @type {string}
+     * @memberof GetCustomerDetailResponse
+     */
+    address?: string;
+    /**
+     * List of user preferences, such as favorite products or services
+     * @type {Array<string>}
+     * @memberof GetCustomerDetailResponse
+     */
+    preferences?: Array<string>;
+    /**
+     * Tags or labels assigned to the member for segmentation or filtering
+     * @type {Array<string>}
+     * @memberof GetCustomerDetailResponse
+     */
+    tags?: Array<string>;
+}
+
+/**
+ * Check if a given object implements the GetCustomerDetailResponse interface.
+ */
+export function instanceOfGetCustomerDetailResponse(value: object): value is GetCustomerDetailResponse {
+    if (!('id' in value) || value['id'] === undefined) return false;
+    if (!('name' in value) || value['name'] === undefined) return false;
+    if (!('phone' in value) || value['phone'] === undefined) return false;
+    if (!('points' in value) || value['points'] === undefined) return false;
+    if (!('memberSince' in value) || value['memberSince'] === undefined) return false;
+    if (!('status' in value) || value['status'] === undefined) return false;
+    return true;
+}
+
+export function GetCustomerDetailResponseFromJSON(json: any): GetCustomerDetailResponse {
+    return GetCustomerDetailResponseFromJSONTyped(json, false);
+}
+
+export function GetCustomerDetailResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): GetCustomerDetailResponse {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'id': json['id'],
+        'name': json['name'],
+        'phone': json['phone'],
+        'email': json['email'] == null ? undefined : json['email'],
+        'points': json['points'],
+        'memberSince': (new Date(json['memberSince'])),
+        'status': json['status'],
+        'tier': json['tier'] == null ? undefined : json['tier'],
+        'birthdate': json['birthdate'] == null ? undefined : json['birthdate'],
+        'address': json['address'] == null ? undefined : json['address'],
+        'preferences': json['preferences'] == null ? undefined : json['preferences'],
+        'tags': json['tags'] == null ? undefined : json['tags'],
+    };
+}
+
+export function GetCustomerDetailResponseToJSON(json: any): GetCustomerDetailResponse {
+    return GetCustomerDetailResponseToJSONTyped(json, false);
+}
+
+export function GetCustomerDetailResponseToJSONTyped(value?: GetCustomerDetailResponse | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'id': value['id'],
+        'name': value['name'],
+        'phone': value['phone'],
+        'email': value['email'],
+        'points': value['points'],
+        'memberSince': ((value['memberSince']).toISOString()),
+        'status': value['status'],
+        'tier': value['tier'],
+        'birthdate': value['birthdate'],
+        'address': value['address'],
+        'preferences': value['preferences'],
+        'tags': value['tags'],
+    };
+}
+
