# src/gen/models/index.ts
@@ -10,6 +10,7 @@ export * from './CreateTenantDto';
 export * from './CreateTenantResponse';
 export * from './CustomerResponse';
 export * from './CustomerWithPointsResponse';
+export * from './GetCustomerDetailResponse';
 export * from './GetTenant';
 export * from './PointConfig';
 export * from './RedeemRewardDto';
